#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddldata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-54
2013-12-12 Andy
- in evr.EventCodeV[34] remove _u16MaskEventAttr_value() method, this is not 
  used anywhere and interferes with default HDF5 schema

Tag: V00-04-53
2013-12-12 Andy
- fix definition of EpicsSampler.ConfigV1.sampleInterval_sec method

Tag: V00-04-52
2013-12-06 Matt
- add Evr::SrcConfigV1 for event source hardware - SLAC modification of EVR.

Tag: V00-04-51
2013-12-02 Andy
- add "config-type" tag to EpixSampler.ConfigV1

Tag: V00-04-49
2013-12-02 Matt
- add Rayonix ConfigV2
	
Tag: V00-04-48
2013-12-02 Matt
- add EpixSampler data types
	
Tag: V00-04-47
2013-11-12 Andy
- ipimb.Config classes define capacitorValues() method which return
  array of CapacitorValue enums (note tat in our current implementation
  arrays of enums are returned as arrays of ints).

Tag: V00-04-46
2013-11-06 Andy
- this tag also includes new rayonix package
- add "no-sizeof" tag to few classes to suppress warnings

Tag: V00-04-45
2013-10-01 Andy
- BldDataSpectrometerV0: make it non-value-type and add auto constructor

Tag: V00-04-44
2013-09-30 Andy
- Mike added new type BldDataSpectrometerV0

Tag: V00-04-43
2013-09-26 Andy Salnikov
- fix bitfield order in opal1k.ConfigV1

Tag: V00-04-42
2013-09-26 Matt Weaver
- documented new Bld.BldDataEBeamV4 fields
- added Control.ConfigV3 with L3T accepted events field
- output in pdsdata V07-01-00
	
Tag: V00-04-41
2013-09-25 Andy Salnikov
- fix for incorrect offsets of data arrays in epics

Tag: V00-04-40
2013-09-24 Andy Salnikov
- add map() method to evr.OuputMap and OutputMapV2

Tag: V00-04-39
2013-09-24 Matt Weaver